--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div id="output">
         </div>
         <div id="input">
-            <p>&gt;</p>
+            <p id="prompt">&gt;</p>
             <input id="input_source" type="command" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus>
         </div>
     </div>
