added tabs and nl formatting

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <div id="screen">
-        <div id="output">
-        </div>
+        <pre id="output">
+        </pre>
         <div id="input">
             <p id="prompt">&gt;</p>
             <input id="input_source" type="command" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus>
