--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>TS-STABLE</title>
     <link rel="stylesheet" href="./index.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 </head>
